--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    {% include 'fragments/navbar.html' %}
     {% include 'fragments/messages.html' %}
     {% block body %}{% endblock body %}
 </body>
