--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
-
 {% block body %}
-{% include 'fragments/navbar.html' %}
-<div class="container mx-auto bg-white flex items-center justify-center min-h-screen py-4">
-    {% block content %}{% endblock content %}
+<div class="min-h-screen bg-background ">
+    <div class="flex items-center justify-center mx-auto px-2 sm:px-4 lg:px-6 py-8">
+        {% block content %}{% endblock content %}
+    </div>
 </div>
 {% endblock body %}
